# pepys

./: Cargo.toml  README.md  test.sh
.cargo/: config
.github/workflows/: rust.yml
a12n/: Cargo.toml
a12n/src/: lib.rs
build_scripts/: gen_code.pl
build_scripts/xml-to-rs/: .gitignore  Cargo.toml  README.md
build_scripts/xml-to-rs/inputs/: CreateProfileResponse.xml  GetAudioEncoderConfigurationOptionsResponse.xml  GetSnapshotUriResponse.xml  GetVideoEncoderConfigurationOptionsResponse.xml
build_scripts/xml-to-rs/inputs/device_service/: GetCapabilitiesResponse.xml  GetServicesResponse.xml
build_scripts/xml-to-rs/inputs/media_service/: GetServiceCapabilitiesResponse.xml  GetVideoEncoderConfigurationsResponse.xml  GetVideoSourceConfigurationsResponse.xml
build_scripts/xml-to-rs/src/: main.rs
integration_testing/: Cargo.toml  lacking_authentication.xml  test.pl
integration_testing/onvif/event_service/: CreatePullPointSubscription.xml  GetEventProperties.xml  PullMessages.xml
integration_testing/onvif/imaging_service/: GetOptions.xml
integration_testing/onvif/media_service/: GetGuaranteedNumberOfVideoEncoderInstances.xml  GetStreamUri.xml  GetVideoEncoderConfiguration.xml
integration_testing/pepys/device_service/: GetRelayOutputs.xml
integration_testing/pepys/media_service/: GetAudioEncoderConfigurationOptions.xml  GetSnapshotUri.xml  GetVideoEncoderConfigurations.xml  GetVideoSourceConfigurations.xml  SetVideoEncoderConfiguration.xml
integration_testing/resources/test/: unknown_service.xml
integration_testing/resources/test/onvif/event_service/: CreatePullPointSubscription.xml  GetEventProperties.xml
integration_testing/resources/test/onvif/media_service/: GetProfiles.xml
integration_testing/src/: main.rs
manual_testing/: TESTING.md  bad_request.xml  example_probe.xml  nics.xml  test.pl
manual_testing/data/: GetCapabilities.xml  GetMoveOptions.xml  GetNTP.xml  GetNetworkInterfaces.xml  GetServices.xml  GetSystemDateAndTime.xml
manual_testing/data/device_service/: GetDeviceInformation.xml  invalid_request.xml
manual_testing/data/media_service/: GetVideoSourceConfigurations.xml
manual_testing/pepys/media_service/: CreateProfile.xml  DeleteProfile.xml  GetProfile.xml  GetProfiles.xml  GetServiceCapabilities.xml  GetVideoSourceConfiguration.xml
server/: Cargo.toml
server/resources/test/: empty.toml  pepys.toml
server/src/: camera.rs  config.rs  main.rs  nics.rs  rpi.rs
server/src/web_services/: devicemgmt.rs  events.rs  imaging.rs  media.rs  mod.rs
server/src/web_services/content/: index.html
server/src/ws_discovery_responder/: mod.rs  probe.rs  probe_response.rs
soap-fault/: Cargo.toml
soap-fault/src/: lib.rs
tmp/: pepys.toml
validate/: Cargo.toml
validate/src/: lib.rs
wsdl_rs/devicemgmt/: Cargo.toml
wsdl_rs/devicemgmt/src/: lib.rs  request.rs  response.rs  test.rs
wsdl_rs/event/: Cargo.toml
wsdl_rs/event/src/: lib.rs  request.rs  response.rs
wsdl_rs/imaging/: Cargo.toml
wsdl_rs/imaging/src/: lib.rs  request.rs  response.rs
wsdl_rs/media/: Cargo.toml
wsdl_rs/media/src/: lib.rs  request.rs  response.rs
xsd_rs/: README.md
xsd_rs/b2/: Cargo.toml
xsd_rs/b2/src/: b-2.rs  lib.rs
xsd_rs/common/: Cargo.toml
xsd_rs/common/src/: lib.rs
xsd_rs/onvif/: Cargo.toml
xsd_rs/onvif/src/: lib.rs  test.rs
xsd_rs/soapenv/: Cargo.toml
xsd_rs/soapenv/src/: lib.rs  test.rs
xsd_rs/t1/: Cargo.toml
xsd_rs/t1/src/: lib.rs
xsd_rs/ws_addr/: Cargo.toml
xsd_rs/ws_addr/src/: lib.rs
xsd_rs/xmlmime/: Cargo.toml
xsd_rs/xmlmime/src/: lib.rs
xsd_rs/xop/: Cargo.toml
xsd_rs/xop/src/: include.rs  lib.rs
