[workspace]
members = [
    "server",

    "wsdl_rs/devicemgmt",
    "wsdl_rs/imaging",
    "wsdl_rs/media",

    "xsd_rs/onvif",

    # Following are the 5 dependencies for onvif.xsd
    "xsd_rs/common",
    "xsd_rs/xmlmime",
    "xsd_rs/soapenv",
    "xsd_rs/b2",
    "xsd_rs/t1",
    "xsd_rs/ws_addr",
    "xsd_rs/xop",

    "validate"
]
exclude = [
    "build_scripts/xml-to-rs"
]

[workspace.package]
authors = ["Martin Cowie"]
version = "0.1.0"
edition = "2021"
readme = "./README.md"
repository = "https://github.com/martin-cowie/pepys"

[workspace.dependencies]
chrono = "0.4.22"
get_if_addrs = "0.5.3"
hyper = { version = "0.14.20", features = ["server", "stream", "http1", "tcp"] }
libc-strftime = "0.2.0"
network-interface = "0.1.3"
static_init = "1.0.3"
tokio = { version = "1.21.1", default-features = false, features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
uuid = { version = "1.1.2", features = ["v4"] }
xml-rs = "0.8.3"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs",  rev = "7f3d433" } # TODO: get a specific revision
yaserde = "0.7.1" # TODO: bring this upto date - Specific version required by xsd-types
yaserde_derive = "0.7.1"



[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"