[package]
name = "pepys"
description = "An ONVIF server for the Raspberry Pi Camera"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
get_if_addrs.workspace = true
static_init.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
yaserde.workspace = true
yaserde_derive.workspace = true
hyper.workspace = true
xsd-types.workspace = true
libc-strftime.workspace = true
network-interface.workspace = true

devicemgmt = {path = "../wsdl_rs/devicemgmt"}
imaging = {path = "../wsdl_rs/imaging"}
media = {path = "../wsdl_rs/media"}
event = {path = "../wsdl_rs/event"}
onvif = { package = "onvif", path = "../xsd_rs/onvif" }
soapenv = { path = "../xsd_rs/soapenv" }
soap-fault = {path = "../soap-fault"}
b2 = {path = "../xsd_rs/b2"}
t1 = {path = "../xsd_rs/t1"}
ws_addr = {path = "../xsd_rs/ws_addr/"}

[dev-dependencies]
tempfile = "3.3.0"
