[package]
name = "xml-to-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
media = {path = "../../wsdl_rs/media"}
devicemgmt = {path = "../../wsdl_rs/devicemgmt/"}
onvif = {path = "../../xsd_rs/onvif"}

yaserde = "0.7.1"
yaserde_derive = "0.7.1"
