[package]
name = "devicemgmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
validate = { path = "../../validate" }
soapenv = { path = "../../xsd_rs/soapenv" }
onvif = { package = "onvif", path = "../../xsd_rs/onvif" }

xml-rs = "0.8.3"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
