[package]
name = "devicemgmt"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
validate = { path = "../../validate" }
soapenv = { path = "../../xsd_rs/soapenv" }
onvif = { package = "onvif", path = "../../xsd_rs/onvif" }

xml-rs.workspace = true
xsd-macro-utils.workspace = true
xsd-types.workspace = true
yaserde.workspace = true
yaserde_derive.workspace = true
