[package]
name = "imaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onvif = { package = "onvif", path = "../../xsd_rs/onvif" }
soapenv = { path = "../../xsd_rs/soapenv" }
validate = { path = "../../validate" }

yaserde = "0.7.1"
yaserde_derive = "0.7.1"
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
