[package]
name = "imaging"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
onvif = { package = "onvif", path = "../../xsd_rs/onvif" }
soapenv = { path = "../../xsd_rs/soapenv" }
validate = { path = "../../validate" }

yaserde.workspace = true
yaserde_derive.workspace = true
xsd-types.workspace =true