[package]
name = "b2"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
t1 = { path = "../t1" }
ws_addr = { path = "../ws_addr" }
validate = { path = "../../validate" }

xml-rs.workspace = true # Required by UtilsDefaultSerde
yaserde.workspace = true
yaserde_derive.workspace = true
xsd-macro-utils.workspace = true
xsd-types.workspace = true
