[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
validate = { path = "../../validate" }
xml-rs = "0.8.3" # Required by UtilsDefaultSerde
yaserde = "0.7.1" # TODO: bring this upto date - Specific version required by xsd-types
yaserde_derive = "0.7.1"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs" } # Not listed in crates.io, so pulling from github
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs" } # TODO: get a specific revision
