[package]
name = "onvif"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
common = {path = "../common"}
xmlmime = {path = "../xmlmime"}
soapenv = {path = "../soapenv"}
b2 = {path = "../b2"}
xop = {path = "../xop"}
validate = { path = "../../validate" }

xml-rs.workspace = true # Required by UtilsDefaultSerde
yaserde.workspace = true
yaserde_derive.workspace = true
xsd-macro-utils.workspace = true
xsd-types.workspace = true
