[package]
name = "soapenv"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
validate = { path = "../../validate" }
xml-rs.workspace = true # Required by UtilsDefaultSerde
yaserde.workspace = true # TODO: bring this upto date - Specific version required by xsd-types
yaserde_derive.workspace = true
xsd-macro-utils.workspace = true
xsd-types.workspace = true
